fix z-index for tableItem

--- a/src/components/FlightsPage/FlightsLinks/flightsLinks.scss
+++ b/src/components/FlightsPage/FlightsLinks/flightsLinks.scss
@@ -17,6 +17,10 @@
     line-height: 60px;
     font-weight: 700;
     border-radius: 50px 50px 0 0;
+    &:hover {
+      background-color: #fff;
+      color: #73d2f0;
+    }
   }
   &__item-active {
     background-color: #fff;
