--- a/src/components/FlightsPage/FlightsTable/fligtsTable.scss
+++ b/src/components/FlightsPage/FlightsTable/fligtsTable.scss
@@ -29,6 +29,7 @@
   &__raw {
     width: 100%;
     height: 60px;
+    position: relative;
     &:hover {
       z-index: 1;
       box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
